Add tx metadata json builders Remove secrets from configuration.