@@ -2,9 +2,7 @@ package iog.psg.cardano.jpi;
 
 import iog.psg.cardano.CardanoApiCodec;
 
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
@@ -33,7 +31,7 @@ public class JpiResponseCheck {
     }
 
     public void createBadWallet() throws CardanoApiException, InterruptedException, TimeoutException, ExecutionException {
-        List<String> mnem = List.of("", "sdfa", "dfd");
+        List<String> mnem = Arrays.asList("", "sdfa", "dfd");
         jpi.createRestore("some name", "password99", mnem, 4).toCompletableFuture().get(timeout, timeoutUnit);
     }
 
@@ -64,7 +62,7 @@ public class JpiResponseCheck {
         String unusedAddrId = unused.get(0).id();
         CardanoApiCodec.QuantityUnit amount = new CardanoApiCodec.QuantityUnit(amountToTransfer, CardanoApiCodec.Units$.MODULE$.lovelace());
         CardanoApiCodec.Payment p = new CardanoApiCodec.Payment(unusedAddrId, amount);
-        CardanoApiCodec.FundPaymentsResponse response = jpi.fundPayments(walletId, List.of(p)).toCompletableFuture().get(timeout, timeoutUnit);
+        CardanoApiCodec.FundPaymentsResponse response = jpi.fundPayments(walletId, Collections.singletonList(p)).toCompletableFuture().get(timeout, timeoutUnit);
         return response;
     }
 
@@ -80,13 +78,14 @@ public class JpiResponseCheck {
             metadataLongKey.put(Long.parseLong(k), v);
         });
 
+        CardanoApiCodec.TxMetadataMapIn in = MetadataBuilder.withMap(metadataLongKey);
         List<CardanoApiCodec.WalletAddressId> unused = jpi.listAddresses(wallet1Id, AddressFilter.UNUSED).toCompletableFuture().get(timeout, timeoutUnit);
         String unusedAddrIdWallet1 = unused.get(0).id();
         CardanoApiCodec.QuantityUnit amount = new CardanoApiCodec.QuantityUnit(amountToTransfer, CardanoApiCodec.Units$.MODULE$.lovelace());
-        List<CardanoApiCodec.Payment> payments = List.of(new CardanoApiCodec.Payment(unusedAddrIdWallet1, amount));
+        List<CardanoApiCodec.Payment> payments = Collections.singletonList(new CardanoApiCodec.Payment(unusedAddrIdWallet1, amount));
         CardanoApiCodec.EstimateFeeResponse response = jpi.estimateFee(wallet1Id, payments).toCompletableFuture().get(timeout, timeoutUnit);
         long max = response.estimatedMax().quantity();
-        return jpi.createTransaction(wallet1Id, passphrase, payments, metadataLongKey).toCompletableFuture().get(timeout, timeoutUnit);
+        return jpi.createTransaction(wallet1Id, passphrase, payments, in, null).toCompletableFuture().get(timeout, timeoutUnit);
 
     }
 
